crates/iota/tests/snapshots/shell_tests__with_network__source_verification_deprecation__no_flags.sh.snap
---
source: crates/iota/tests/shell_tests.rs
description: tests/shell_tests/with_network/source_verification_deprecation/no_flags.sh
---
----- script -----
# Copyright (c) Mysten Labs, Inc.
# Modifications Copyright (c) 2024 IOTA Stiftung
# SPDX-License-Identifier: Apache-2.0

# check that we get a deprecation warning when upgrading without any dependency verification flags

echo "=== munge Move.toml files ===" | tee /dev/stderr
FRAMEWORK_DIR=$(echo $CARGO_MANIFEST_DIR | sed 's#/crates/iota#/crates/iota-framework/packages/iota-framework#g')
for i in dependency/Move.toml example/Move.toml
do
  cat $i | sed "s#FRAMEWORK_DIR#$FRAMEWORK_DIR#g" > Move.toml \
    && mv Move.toml $i
done

echo "=== publish dependency ===" | tee /dev/stderr
iota client --client.config $CONFIG publish "dependency" \
  --json | jq '.effects.status'

echo "=== publish package v0 (should note deprecation) ===" | tee /dev/stderr
UPGRADE_CAP=$(iota client --client.config $CONFIG publish "example" \
  --json | jq -r '.objectChanges[] | select(.objectType == "0x2::package::UpgradeCap") | .objectId')

echo "=== upgrade package (should note deprecation) ===" | tee /dev/stderr
iota client --client.config $CONFIG upgrade --upgrade-capability $UPGRADE_CAP example \
  --json | jq '.effects.status'

echo "=== modify dependency ===" | tee /dev/stderr
cat dependency/sources/dependency.move | sed 's#0#1#g' > dependency.move
mv dependency.move dependency/sources/dependency.move

echo "=== try to publish with modified dep (should succeed) ===" | tee /dev/stderr
UPGRADE_CAP=$(iota client --client.config $CONFIG publish "example" \
  --json | jq -r '.objectChanges[] | select(.objectType == "0x2::package::UpgradeCap") | .objectId')

echo "=== try to upgrade with modified dep (should succeed) ===" | tee /dev/stderr
iota client --client.config $CONFIG upgrade --upgrade-capability $UPGRADE_CAP example \
  --json | jq '.effects.status'

----- results -----
success: true
exit_code: 0
----- stdout -----
=== munge Move.toml files ===
=== publish dependency ===
{
  "status": "success"
}
=== publish package v0 (should note deprecation) ===
=== upgrade package (should note deprecation) ===
{
  "status": "success"
}
=== modify dependency ===
=== try to publish with modified dep (should succeed) ===
=== try to upgrade with modified dep (should succeed) ===
{
  "status": "success"
}

----- stderr -----
=== munge Move.toml files ===
=== publish dependency ===
[Note]: Dependency sources are no longer verified automatically during publication and upgrade. You can pass the `--verify-deps` option if you would like to verify them as part of publication or upgrade.
BUILDING dependency
Skipping dependency verification
=== publish package v0 (should note deprecation) ===
[Note]: Dependency sources are no longer verified automatically during publication and upgrade. You can pass the `--verify-deps` option if you would like to verify them as part of publication or upgrade.
INCLUDING DEPENDENCY dependency
BUILDING example
Skipping dependency verification
=== upgrade package (should note deprecation) ===
[Note]: Dependency sources are no longer verified automatically during publication and upgrade. You can pass the `--verify-deps` option if you would like to verify them as part of publication or upgrade.
INCLUDING DEPENDENCY dependency
BUILDING example
Skipping dependency verification
=== modify dependency ===
=== try to publish with modified dep (should succeed) ===
[Note]: Dependency sources are no longer verified automatically during publication and upgrade. You can pass the `--verify-deps` option if you would like to verify them as part of publication or upgrade.
INCLUDING DEPENDENCY dependency
BUILDING example
Skipping dependency verification
=== try to upgrade with modified dep (should succeed) ===
[Note]: Dependency sources are no longer verified automatically during publication and upgrade. You can pass the `--verify-deps` option if you would like to verify them as part of publication or upgrade.
INCLUDING DEPENDENCY dependency
BUILDING example
Skipping dependency verification
